Closed Bug 1373852 Opened 7 years ago Closed 7 years ago

font-kerning: normal fails to enable vkrn in vertical text (writing-mode)

Categories

(Core :: Layout: Text and Fonts, defect, P3)

defect

Tracking

()

RESOLVED FIXED
mozilla57
Tracking Status
firefox57 --- fixed

People

(Reporter: chris, Assigned: jfkthame)

Details

(Keywords: testcase)

Attachments

(1 file)

User Agent: Mozilla/5.0 (Windows NT 10.0; WOW64; rv:54.0) Gecko/20100101 Firefox/54.0
Build ID: 20170608105825

Steps to reproduce:

Run this test from Web Platform tests, which uses a special font to see which OpenType features are enabled
http://test.csswg.org/suites/css-fonts-3_dev/nightly-unstable/html/font-kerning-03.htm
(I wrote the test, Myles from Apple reviewed the test and developed the special font)


Actual results:

The three lines of vertical text are not identical, because vkrn is not automatically enabled for vertical text
This is one of the few CSSFonts 3 tests that Firefox does not pass, and it looks like a simple oversight


Expected results:

The three lines should be identical.
Spec text from CSS Fonts 3 "(for vertical text runs the vkrn feature is enabled instead)"
https://www.w3.org/TR/css-fonts-3/#font-kerning-prop
Component: Untriaged → Layout: Text
Product: Firefox → Core
Firefox 56.0a1 buildID=20170629100321 also fails this test. So, setting Version to Trunk

Chrome 61.0.3141.7 also fails this test but in a different manner.
Keywords: testcase
OS: Unspecified → All
Hardware: Unspecified → All
Summary: font-kerning: normal fails to enable vkrn in vertical text → font-kerning: normal fails to enable vkrn in vertical text (writing-mode)
Version: 54 Branch → Trunk
Priority: -- → P3
This looks pretty trivial, actually; we just need to take account of the orientation (horizontal vs vertical shaping) for which the nsFontMetrics is being set up, and map font-kerning:normal to the corresponding OpenType feature. With this, the CSS-Fonts-3 testcase above works as expected.
Attachment #8908680 - Flags: review?(jmuizelaar)
Assignee: nobody → jfkthame
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true
Attachment #8908680 - Flags: review?(jmuizelaar) → review+
Pushed by jkew@mozilla.com:
https://hg.mozilla.org/integration/mozilla-inbound/rev/28ee946c2868
Map font-kerning:normal to the appropriate low-level feature depending on orientation. r=jrmuizel
https://hg.mozilla.org/integration/mozilla-inbound/rev/7e5b28819e5b
Update WPT metadata now that font-kerning-03 is no longer expected to fail. r=me
https://hg.mozilla.org/mozilla-central/rev/28ee946c2868
https://hg.mozilla.org/mozilla-central/rev/7e5b28819e5b
Status: ASSIGNED → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla57
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: