Bug 1373852 - Map font-kerning:normal to the appropriate low-level feature depending on orientation. r=jrmuizel